finished tika parser and s3 connector